assets/sass/layout/_header.scss
.navbar-dropdown {
	@extend .navbar-nav;
	margin: 0;
	float: left;
}

.topbar {
	background-color: $aplus-brand-primary;
	border-bottom: none;
	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25),
		inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25),
		inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);

	.navbar-brand,
	.navbar-dropdown > a,
	.navbar-nav > li > a,
	.navbar-toggle,
	.navbar-nav > .active > a,
	.navbar-nav > .active > a:hover {
		@include focus-with-background-and-color;

		color: #ffffff;
		background: transparent;
	}

	.navbar-dropdown > li.dropdown > a.dropdown-toggle {
		padding-top: $navbar-padding-vertical;
		padding-bottom: $navbar-padding-vertical;
	}

	a.navbar-brand:hover,
	a.navbar-dropdown > a:hover,
	.navbar-nav > li > a:hover,
	.navbar-nav > .open > a,
	.navbar-nav > .open > a:focus,
	.navbar-nav > .open > a:hover {
		@include focus-with-background-and-color;
		background-color: #236aa7;
		background-color: rgba(0, 0, 0, 0.1);
	}
	.navbar-nav > li.active > a:focus,
	.navbar-nav > li.open > a:focus {
		&:focus,
		&:hover {
			@include focus-with-background-and-color;
			background-color: rgba(0,0,0,0.1);
		}
	}

	.navbar-brand + .navbar-text {
		float: left;
		font-size: $font-size-small;
		color: $gray-lighter;
	}

	.navbar-toggle .badge {
		position: absolute;
		right: -10px;
		top: 4px;
	}
	.navbar-toggle {
		&:focus,
		&:hover {
			background-color: #fff;
			@include focus-with-background-and-color;

			.icon-bar {
				background-color: #000000;
			}
		}
	}

	.navbar-header {
		.visible-xs {
			max-width: 250px;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}
		@media (max-width: $grid-float-breakpoint-max) {
			.instance-selector {
				margin-left: 30px;
			}

			.navbar-nav.instance-selector {
				li.open {
					a {
						background-color: #005eb8;
						color: #fff;
					}
				}
			}
		}
	}

	.navbar-dropdown {
		div.dropdown-backdrop {
			display: none;
		}
		@media (max-width: $grid-float-breakpoint-max) {
			li.open > ul.dropdown-menu {
				& > li > a{
					color: #dadada;
				}
			}
		}
	}

	ul.visible-xs {
		margin: 0;

		li {
			border: 1px solid;
			border-top: none;
			border-color: #236aa7;
			border-color: rgba(0, 0, 0, 0.25);
			a {
				color: white;
				padding: 10px 15px !important;
			}
		}
		ul.dropdown-menu {
			padding: 0;

			li {
				border: none;
				border-top: 1px solid;

				button[type="submit"] {
					color: #dadada;
					height: 2.63em;
					&:hover,
					&:focus {
						@include focus-with-background-and-color;
						background-color: #236aa7;
						background-color: rgba(0, 0, 0, 0.1);
					}
				}
			}
		}
		.header {
			border-left: none;
			border-right: none;
			padding: 0.2em 1em;

			h4 {
				font-size: 1em;
				font-weight: bolder;
				color: #ffffff;
				margin: 0;
			}
		}
	}
}

